<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/spacing_long"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        tools:src="@drawable/ic_no_movie_found" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_long"
        android:text="@string/lorem_small"
        android:textAlignment="center"
        android:textAppearance="@style/text_body"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/text_body"
        android:textAlignment="center"
        android:text="@string/lorem_medium"
        android:layout_marginHorizontal="@dimen/spacing_long"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/text_body"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:background="@drawable/btn_primary_background"
        android:paddingHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/spacing_long"
        android:layout_marginHorizontal="@dimen/spacing_long"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body" />

</androidx.constraintlayout.widget.ConstraintLayout>