<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.moviedetails.MovieDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name"
            app:expandedTitleTextColor="@android:color/transparent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/spacing_long"
                    android:background="@drawable/backdrop_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_header"
                    android:textAlignment="center"
                    android:text="@string/app_name"
                    android:layout_marginHorizontal="@dimen/spacing_long"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/vote_average_container" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/vote_average_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/vote_average_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:isIndicator="true"
                        android:max="10"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:progress="3"
                        android:progressBackgroundTint="?attr/colorOnSurface"
                        android:progressTint="@color/vote_average_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/vote_average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/text_body"
                        android:text="@string/fake_vote_average"
                        android:layout_marginHorizontal="@dimen/spacing_medium"
                        android:layout_marginTop="-12dp"
                        android:textAlignment="center" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/divider_medium"
            app:showDividers="middle">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_title"
                android:text="@string/genres"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_body"
                android:text="@string/lorem_medium"
                android:layout_marginHorizontal="@dimen/spacing_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_title"
                android:text="@string/plot_summary"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_body"
                android:text="@string/lorem_long"
                android:layout_marginHorizontal="@dimen/spacing_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_body"
                android:text="@string/fake_date"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:orientation="vertical"
                app:divider="@drawable/divider_medium"
                app:showDividers="middle">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_title"
                    android:text="@string/videos"
                    android:layout_marginTop="@dimen/spacing_medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <include
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/message_layout"
                    android:layout_marginHorizontal="@dimen/spacing_long"
                    android:layout_weight="1" />

                <include
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/loading_layout"
                    android:layout_weight="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>